# azure-container-apps-multi-agent-workflow

./: readme.md
Option1/: .env.example  .gitignore  architecture.md  docker-compose.yml  package-lock.json  package.json  readme.md
Option1/.github/: copilot-instructions.md
Option1/infra/: deploy.ps1  main.bicep  setup.ps1
Option2/: readme.md
Option2/Lab/docs/: content-creator-agent-architecture.md  how-to-run-locally.md  lab-manual.md  podcaster-agent-architecture.md
Option2/Lab/src/agent-creator/AgentCreator/: AgentCreator.csproj
Option2/Lab/src/agent-creator/AgentCreator.Tests/: AgentCreator.Tests.csproj
Option2/Lab/src/agent-podcaster/: pyproject.toml  script_generator.py
Option2/Lab/src/agent-podcaster/tests/: conftest.py  test_script_generator.py
Option2/Lab/src/agent-podcaster/tools/: pronunciations.py
Option2/Lab/src/agent-research/: agent.py  main.py  pyproject.toml  test_sandbox_request.py
Option2/Lab/src/agent-research/tests/: test_sandbox_fetch.py
Option2/Lab/src/agent-research/tools/: sandbox_fetch.py
Option2/Lab/src/dev-ui/: index.html
Option2/infra/: README.md  main.bicep  main.json
